src/test/ui/generic-type-less-params-with-defaults.stderr
error[E0243]: wrong number of type arguments: expected at least 1, found 0
  --> $DIR/generic-type-less-params-with-defaults.rs:19:12
   |
19 |     let _: Vec;
   |            ^^^ expected at least 1 type argument

error: aborting due to previous error

